--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -162,22 +162,30 @@ jobs:
 
   windows:
     name: "Windows: ${{ matrix.platform.target }}"
-    runs-on: '${{ matrix.platform.os }}'
+    runs-on: "${{ matrix.platform.os }}"
     strategy:
       matrix:
         platform:
           - target: x64
             os: windows-latest
-            py_arch: 'x64'
-            interpreter: '3.13'
-          - target: x86
-            py_arch: 'x86'
+            py_arch: "x64"
+            interpreter: "pypy3.10"
+          - target: x64
             os: windows-latest
-            interpreter: '3.13'
+            py_arch: "x64"
+            interpreter: "pypy3.9"
+          - target: x64
+            os: windows-latest
+            py_arch: "x64"
+            interpreter: "3.13"
+          - target: x86
+            py_arch: "x86"
+            os: windows-latest
+            interpreter: "3.13"
           - target: aarch64
-            py_arch: 'arm64'
+            py_arch: "arm64"
             os: windows-11-arm
-            interpreter: '3.13'
+            interpreter: "3.13"
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
@@ -205,6 +213,11 @@ jobs:
   macos:
     name: "MacOS"
     runs-on: macos-latest
+    strategy:
+      matrix:
+        py:
+          - 3.9 3.10 3.11 3.12 3.13
+          - pypy3.9 pypy3.10
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
@@ -215,13 +228,13 @@ jobs:
         uses: PyO3/maturin-action@v1
         with:
           target: x86_64
-          args: --release --out dist -i 3.9 3.10 3.11 3.12 3.13 pypy3.9 pypy3.10
+          args: --release --out dist -i ${{ matrix.py }}
           sccache: "true"
       - name: Build wheels - universal2
         uses: PyO3/maturin-action@v1
         with:
           target: universal2-apple-darwin
-          args: --release --out dist -i 3.9 3.10 3.11 3.12 3.13 pypy3.9 pypy3.10
+          args: --release --out dist -i ${{ matrix.py }}
       - name: Install and test uuid_utils
         run: |
           pip install uuid_utils --no-index --find-links dist --force-reinstall
@@ -230,7 +243,7 @@ jobs:
       - name: Upload wheels
         uses: actions/upload-artifact@v4
         with:
-          name: wheels-macos
+          name: wheels-macos-${{ strategy.job-index }}
           path: dist
 
   sdist:
@@ -253,7 +266,17 @@ jobs:
     name: Release
     runs-on: ubuntu-latest
     if: "startsWith(github.ref, 'refs/tags/')"
-    needs: [lint, linux, linux-cross, musllinux, musllinux-cross, windows, macos, sdist]
+    needs:
+      [
+        lint,
+        linux,
+        linux-cross,
+        musllinux,
+        musllinux-cross,
+        windows,
+        macos,
+        sdist,
+      ]
     steps:
       - uses: actions/download-artifact@v4.1.8
         with:
