--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -266,17 +266,7 @@ jobs:
     name: Release
     runs-on: ubuntu-latest
     if: "startsWith(github.ref, 'refs/tags/')"
-    needs:
-      [
-        lint,
-        linux,
-        linux-cross,
-        musllinux,
-        musllinux-cross,
-        windows,
-        macos,
-        sdist,
-      ]
+    needs: [lint, linux, linux-cross, musllinux, musllinux-cross, windows, macos, sdist]
     steps:
       - uses: actions/download-artifact@v4.1.8
         with:
