Update CI workflow to use windows-latest OS

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -176,7 +176,7 @@ jobs:
             interpreter: "3.13"
           - target: aarch64
             py_arch: "arm64"
-            os: windows
+            os: windows-latest
             interpreter: "3.13"
     steps:
       - uses: actions/checkout@v4
