--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -174,6 +174,10 @@ jobs:
             py_arch: "x86"
             os: windows-latest
             interpreter: "3.13"
+          - target: aarch64
+            py_arch: "arm64"
+            os: windows-11-arm
+            interpreter: "3.13"
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
