--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -142,6 +142,8 @@ jobs:
         platform:
           - target: aarch64-unknown-linux-musl
             arch: aarch64
+          - target: armv7-unknown-linux-musleabihf
+            arch: armv7
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
