--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -86,7 +86,7 @@ jobs:
           install: |
             apt-get update
             apt-get install -y --no-install-recommends python3 python3-pip
-            pip install pip pytest pytest-codspeed
+            pip install pytest pytest-codspeed
           run: |
             pip3 install uuid_utils --no-index --find-links dist/ --force-reinstall
             pytest -v .
