--- a/.github/workflows/codspeed.yml
+++ b/.github/workflows/codspeed.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Build Python package with maturin
         uses: PyO3/maturin-action@v1
         with:
-          args: --release
+          args: --release --out dist
       - name: Install uuid_utils
         run: pip install uuid_utils --no-index --find-links dist --force-reinstall
       - name: Run benchmarks
