--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,12 +5,12 @@ build-backend = "maturin"
 [project]
 name = "uuid_utils"
 readme = "README.md"
-description = "Drop-in replacement for Python UUID with bindings in Rust"
-authors = [{ name = "Amin Alaee", email = "me@aminalaee.dev" }]
+description = "Fast, drop-in replacement for Python's uuid module, powered by Rust."
+authors = [{ name = "Amin Alaee", email = "mohammadamin.alaee@gmail.com" }]
 keywords = ["rust", "uuid"]
 requires-python = ">=3.9"
 classifiers = [
-  "Development Status :: 3 - Alpha",
+  "Development Status :: 4 - Beta",
   "Programming Language :: Python",
   "Programming Language :: Python :: 3",
   "Programming Language :: Python :: 3 :: Only",
