--- a/.github/workflows/third-party.yml
+++ b/.github/workflows/third-party.yml
@@ -31,11 +31,13 @@ jobs:
       - name: Install Rust
         uses: dtolnay/rust-toolchain@stable
 
-      - name: Build and install uuid-utils from source
+      - name: Build uuid-utils wheel
         run: |
           pip install maturin
           maturin build --release --out dist
-          pip install uuid_utils --no-index --find-links dist --force-reinstall
+
+      - name: Install uv
+        uses: astral-sh/setup-uv@v4
 
       - name: Checkout langchain-core
         uses: actions/checkout@v4
@@ -48,13 +50,13 @@ jobs:
             libs/text-splitters
           sparse-checkout-cone-mode: false
 
-      - name: Install uv
-        uses: astral-sh/setup-uv@v5
-
-      - name: Run langchain-core tests
+      - name: Install langchain-core dependencies and run tests
         run: |
           cd langchain/libs/core
-          make tests
+          uv sync --all-groups
+          WHEEL_FILE=$(ls $GITHUB_WORKSPACE/dist/uuid_utils-*.whl)
+          UV_NO_SYNC=1 uv pip install --force-reinstall $WHEEL_FILE
+          UV_NO_SYNC=1 make test
 
   langsmith-sdk:
     name: Test langsmith SDK
@@ -66,6 +68,9 @@ jobs:
       - name: Checkout uuid-utils
         uses: actions/checkout@v4
 
+      - name: Install uv
+        uses: astral-sh/setup-uv@v4
+
       - name: Setup Python
         uses: actions/setup-python@v5
         with:
@@ -74,11 +79,10 @@ jobs:
       - name: Install Rust
         uses: dtolnay/rust-toolchain@stable
 
-      - name: Build and install uuid-utils from source
+      - name: Build uuid-utils wheel
         run: |
-          pip install maturin
+          uv pip install --system maturin
           maturin build --release --out dist
-          pip install uuid_utils --no-index --find-links dist --force-reinstall
 
       - name: Checkout langsmith-sdk
         uses: actions/checkout@v4
@@ -88,10 +92,10 @@ jobs:
           sparse-checkout: python
           sparse-checkout-cone-mode: false
 
-      - name: Install uv
-        uses: astral-sh/setup-uv@v5
-
-      - name: Run langsmith-sdk tests
+      - name: Install langsmith-sdk dependencies and run tests
         run: |
           cd langsmith-sdk/python
-          make tests
+          uv sync --all-groups
+          WHEEL_FILE=$(ls $GITHUB_WORKSPACE/dist/uuid_utils-*.whl)
+          UV_NO_SYNC=1 uv pip install --force-reinstall $WHEEL_FILE
+          UV_NO_SYNC=1 make test
