--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,300 +1,297 @@
 name: CI
 
 on:
-    push:
-        branches:
-            - main
-        tags:
-            - "*"
-    pull_request:
+  push:
+    branches:
+      - main
+    tags:
+      - "*"
+  pull_request:
 
 env:
-    RUSTFLAGS: "--cfg uuid_unstable"
+  RUSTFLAGS: "--cfg uuid_unstable"
 
 jobs:
-    lint:
-        name: Check code quality
-        runs-on: ubuntu-latest
-        steps:
-            - uses: actions/checkout@v4
-            - uses: actions/setup-python@v5
-              with:
-                  python-version: "3.12"
-            - name: Install dependencies
-              run: pip install -r requirements.txt
-            - name: Check code
-              run: make lint
-            - name: Check docs
-              run: make docs_build
+  lint:
+    name: Check code quality
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+        with:
+          python-version: "3.12"
+      - name: Install dependencies
+        run: pip install -r requirements.txt
+      - name: Check code
+        run: make lint
+      - name: Check docs
+        run: make docs_build
 
-    linux:
-        name: "Linux: ${{ matrix.target }} Python ${{ matrix.python-version }}"
-        runs-on: ubuntu-latest
-        strategy:
-            matrix:
-                target: [x86_64, i686]
-                python-version: ["3.10", "3.11", "3.12", "3.13", "3.14"]
-        steps:
-            - uses: actions/checkout@v4
-            - uses: actions/setup-python@v5
-              with:
-                  python-version: "${{ matrix.python-version }}"
-            - name: Build wheels
-              uses: PyO3/maturin-action@v1
-              with:
-                  target: ${{ matrix.target }}
-                  args: --release --out dist -i 3.9 3.10 3.11 3.12 3.13 3.14 pypy3.11
-                  sccache: "true"
-                  manylinux: auto
-            - name: Install and test
-              if: matrix.target == 'x86_64'
-              run: |
-                  pip install uuid_utils --no-index --find-links dist --force-reinstall
-                  pip install pytest pytest-codspeed
-                  pytest -v .
-            - name: Upload wheels
-              uses: actions/upload-artifact@v4
-              with:
-                  name: wheels-linux-${{ strategy.job-index }}
-                  path: dist
+  linux:
+    name: "Linux: ${{ matrix.target }} Python ${{ matrix.python-version }}"
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        target: [x86_64, i686]
+        python-version: ["3.10", "3.11", "3.12", "3.13", "3.14"]
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+        with:
+          python-version: "${{ matrix.python-version }}"
+      - name: Build wheels
+        uses: PyO3/maturin-action@v1
+        with:
+          target: ${{ matrix.target }}
+          args: --release --out dist -i 3.9 3.10 3.11 3.12 3.13 3.14 pypy3.11
+          sccache: "true"
+          manylinux: auto
+      - name: Install and test
+        if: matrix.target == 'x86_64'
+        run: |
+          pip install uuid_utils --no-index --find-links dist --force-reinstall
+          pip install pytest pytest-codspeed
+          pytest -v .
+      - name: Upload wheels
+        uses: actions/upload-artifact@v4
+        with:
+          name: wheels-linux-${{ strategy.job-index }}
+          path: dist
 
-    linux-cross:
-        name: "Linux: ${{ matrix.target }}"
-        runs-on: ubuntu-latest
-        strategy:
-            matrix:
-                target: [aarch64, armv7, ppc64le]
-        steps:
-            - uses: actions/checkout@v4
-            - uses: actions/setup-python@v5
-              with:
-                  python-version: "3.12"
-            - name: Build wheels
-              uses: PyO3/maturin-action@v1
-              with:
-                  rust-toolchain: stable
-                  target: ${{ matrix.target }}
-                  manylinux: auto
-                  args: --release --out dist -i 3.9 3.10 3.11 3.12 3.13 3.14 pypy3.11
-            - uses: uraimo/run-on-arch-action@v2.8.1
-              if: matrix.target != 'ppc64'
-              name: Install built wheel
-              with:
-                  arch: ${{ matrix.target }}
-                  distro: ubuntu22.04
-                  githubToken: ${{ github.token }}
-                  install: |
-                      apt-get update
-                      apt-get install -y --no-install-recommends python3 python3-pip
-                      pip install pytest
-                  run: |
-                      pip install uuid_utils --no-index --find-links dist/ --force-reinstall
-                      pytest -v .
-            - name: Upload wheels
-              uses: actions/upload-artifact@v4
-              with:
-                  name: wheels-linux-cross-${{ strategy.job-index }}
-                  path: dist
+  linux-cross:
+    name: "Linux: ${{ matrix.target }}"
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        target: [aarch64, armv7, ppc64le]
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+        with:
+          python-version: "3.12"
+      - name: Build wheels
+        uses: PyO3/maturin-action@v1
+        with:
+          rust-toolchain: stable
+          target: ${{ matrix.target }}
+          manylinux: auto
+          args: --release --out dist -i 3.9 3.10 3.11 3.12 3.13 3.14 pypy3.11
+      - uses: uraimo/run-on-arch-action@v2.8.1
+        if: matrix.target != 'ppc64'
+        name: Install built wheel
+        with:
+          arch: ${{ matrix.target }}
+          distro: ubuntu22.04
+          githubToken: ${{ github.token }}
+          install: |
+            apt-get update
+            apt-get install -y --no-install-recommends python3 python3-pip
+            pip install pytest
+          run: |
+            pip install uuid_utils --no-index --find-links dist/ --force-reinstall
+            pytest -v .
+      - name: Upload wheels
+        uses: actions/upload-artifact@v4
+        with:
+          name: wheels-linux-cross-${{ strategy.job-index }}
+          path: dist
 
-    musllinux:
-        name: "Linux: ${{ matrix.target }}"
-        runs-on: ubuntu-latest
-        strategy:
-            matrix:
-                target:
-                    - x86_64-unknown-linux-musl
-                    - i686-unknown-linux-musl
-        steps:
-            - uses: actions/checkout@v4
-            - uses: actions/setup-python@v5
-              with:
-                  python-version: "3.12"
-                  architecture: x64
-            - name: Build wheels
-              uses: PyO3/maturin-action@v1
-              with:
-                  rust-toolchain: stable
-                  target: ${{ matrix.target }}
-                  manylinux: musllinux_1_2
-                  args: --release --out dist -i 3.9 3.10 3.11 3.12 3.13 3.14
-            - name: Install built wheel
-              if: matrix.target == 'x86_64-unknown-linux-musl'
-              uses: addnab/docker-run-action@v3
-              with:
-                  image: alpine:latest
-                  options: -v ${{ github.workspace }}:/io -w /io
-                  run: |
-                      apk add py3-pip
-                      pip3 install -U pip pytest
-                      pip3 install uuid_utils --no-index --find-links /io/dist/ --force-reinstall --break-system-packages
-                      python3 -c "import uuid_utils"
-            - name: Upload wheels
-              uses: actions/upload-artifact@v4
-              with:
-                  name: wheels-musllinux-${{ strategy.job-index }}
-                  path: dist
+  musllinux:
+    name: "Linux: ${{ matrix.target }}"
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        target:
+          - x86_64-unknown-linux-musl
+          - i686-unknown-linux-musl
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+        with:
+          python-version: "3.12"
+          architecture: x64
+      - name: Build wheels
+        uses: PyO3/maturin-action@v1
+        with:
+          rust-toolchain: stable
+          target: ${{ matrix.target }}
+          manylinux: musllinux_1_2
+          args: --release --out dist -i 3.9 3.10 3.11 3.12 3.13 3.14
+      - name: Install built wheel
+        if: matrix.target == 'x86_64-unknown-linux-musl'
+        uses: addnab/docker-run-action@v3
+        with:
+          image: alpine:latest
+          options: -v ${{ github.workspace }}:/io -w /io
+          run: |
+            apk add py3-pip
+            pip3 install -U pip pytest
+            pip3 install uuid_utils --no-index --find-links /io/dist/ --force-reinstall --break-system-packages
+            python3 -c "import uuid_utils"
+      - name: Upload wheels
+        uses: actions/upload-artifact@v4
+        with:
+          name: wheels-musllinux-${{ strategy.job-index }}
+          path: dist
 
-    musllinux-cross:
-        name: "Linux: ${{ matrix.platform.target }}"
-        runs-on: ubuntu-latest
-        strategy:
-            matrix:
-                platform:
-                    - target: aarch64-unknown-linux-musl
-                      arch: aarch64
-                    - target: armv7-unknown-linux-musleabihf
-                      arch: armv7
-        steps:
-            - uses: actions/checkout@v4
-            - uses: actions/setup-python@v5
-              with:
-                  python-version: "3.12"
-            - name: Build wheels
-              uses: PyO3/maturin-action@v1
-              with:
-                  rust-toolchain: stable
-                  target: ${{ matrix.platform.target }}
-                  manylinux: musllinux_1_2
-                  args: --release --out dist -i 3.9 3.10 3.11 3.12 3.13 3.14
-            - name: Upload wheels
-              uses: actions/upload-artifact@v4
-              with:
-                  name: wheels-musllinux-cross-${{ strategy.job-index }}
-                  path: dist
+  musllinux-cross:
+    name: "Linux: ${{ matrix.platform.target }}"
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        platform:
+          - target: aarch64-unknown-linux-musl
+            arch: aarch64
+          - target: armv7-unknown-linux-musleabihf
+            arch: armv7
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+        with:
+          python-version: "3.12"
+      - name: Build wheels
+        uses: PyO3/maturin-action@v1
+        with:
+          rust-toolchain: stable
+          target: ${{ matrix.platform.target }}
+          manylinux: musllinux_1_2
+          args: --release --out dist -i 3.9 3.10 3.11 3.12 3.13 3.14
+      - name: Upload wheels
+        uses: actions/upload-artifact@v4
+        with:
+          name: wheels-musllinux-cross-${{ strategy.job-index }}
+          path: dist
 
-    windows:
-        name: "Windows: ${{ matrix.platform.target }}"
-        runs-on: "${{ matrix.platform.os }}"
-        strategy:
-            matrix:
-                platform:
-                    - target: x64
-                      os: windows-latest
-                      py_arch: "x64"
-                      interpreter: "3.13"
-                    - target: x86
-                      py_arch: "x86"
-                      os: windows-latest
-                      interpreter: "3.13"
-                    - target: aarch64
-                      py_arch: "arm64"
-                      os: windows-11-arm
-                      interpreter: "3.13"
-        steps:
-            - uses: actions/checkout@v4
-            - uses: actions/setup-python@v5
-              with:
-                  python-version: "${{ matrix.platform.interpreter }}"
-                  architecture: ${{ matrix.platform.py_arch }}
-            - uses: dtolnay/rust-toolchain@stable
-            - name: Build wheels
-              uses: PyO3/maturin-action@v1
-              with:
-                  target: ${{ matrix.platform.target }}
-                  args: --release --out dist -i ${{ matrix.platform.interpreter }}
-                  sccache: "true"
-            - name: Install and test uuid_utils
-              run: |
-                  pip install uuid_utils --no-index --find-links dist --force-reinstall
-                  pip install pytest pytest-codspeed
-                  pytest -v .
-            - name: Upload wheels
-              uses: actions/upload-artifact@v4
-              with:
-                  name: wheels-windows-${{ strategy.job-index }}
-                  path: dist
+  windows:
+    name: "Windows: ${{ matrix.platform.target }}"
+    runs-on: "${{ matrix.platform.os }}"
+    strategy:
+      matrix:
+        platform:
+          - target: x64
+            os: windows-latest
+            py_arch: "x64"
+            interpreter: "3.13"
+          - target: x86
+            py_arch: "x86"
+            os: windows-latest
+            interpreter: "3.13"
+          - target: aarch64
+            py_arch: "arm64"
+            os: windows-11-arm
+            interpreter: "3.13"
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+        with:
+          python-version: "${{ matrix.platform.interpreter }}"
+          architecture: ${{ matrix.platform.py_arch }}
+      - uses: dtolnay/rust-toolchain@stable
+      - name: Build wheels
+        uses: PyO3/maturin-action@v1
+        with:
+          target: ${{ matrix.platform.target }}
+          args: --release --out dist -i ${{ matrix.platform.interpreter }}
+          sccache: "true"
+      - name: Install and test uuid_utils
+        run: |
+          pip install uuid_utils --no-index --find-links dist --force-reinstall
+          pip install pytest pytest-codspeed
+          pytest -v .
+      - name: Upload wheels
+        uses: actions/upload-artifact@v4
+        with:
+          name: wheels-windows-${{ strategy.job-index }}
+          path: dist
 
-    macos:
-        name: "MacOS"
-        runs-on: macos-latest
-        strategy:
-            matrix:
-                py:
-                    - { i: "3.9 3.10 3.11 3.12 3.13 3.14", py: "3.9" }
-                    - {
-                          i: "pypy3.11 pypy3.11 3.11 3.12 3.13 3.14",
-                          py: "pypy3.11",
-                      }
-        steps:
-            - uses: actions/checkout@v4
-            - uses: actions/setup-python@v5
-              with:
-                  python-version: "${{ matrix.py.py }}"
-            - uses: dtolnay/rust-toolchain@stable
-            - name: Build wheels - x86_64
-              uses: PyO3/maturin-action@v1
-              with:
-                  target: x86_64
-                  args: --release --out dist -i ${{ matrix.py.i }}
-                  sccache: "true"
-            - name: Build wheels - universal2
-              uses: PyO3/maturin-action@v1
-              with:
-                  target: universal2-apple-darwin
-                  args: --release --out dist -i ${{ matrix.py.i }}
-            - name: Install and test uuid_utils
-              run: |
-                  pip install uuid_utils --no-index --find-links dist --force-reinstall
-                  pip install pytest pytest-codspeed
-                  pytest -v .
-            - name: Upload wheels
-              uses: actions/upload-artifact@v4
-              with:
-                  name: wheels-macos-${{ strategy.job-index }}
-                  path: dist
+  macos:
+    name: "MacOS"
+    runs-on: macos-latest
+    strategy:
+      matrix:
+        py:
+          - { i: "3.9 3.10 3.11 3.12 3.13 3.14", py: "3.9" }
+          - { i: "pypy3.11 pypy3.11 3.11 3.12 3.13 3.14", py: "pypy3.11" }
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+        with:
+          python-version: "${{ matrix.py.py }}"
+      - uses: dtolnay/rust-toolchain@stable
+      - name: Build wheels - x86_64
+        uses: PyO3/maturin-action@v1
+        with:
+          target: x86_64
+          args: --release --out dist -i ${{ matrix.py.i }}
+          sccache: "true"
+      - name: Build wheels - universal2
+        uses: PyO3/maturin-action@v1
+        with:
+          target: universal2-apple-darwin
+          args: --release --out dist -i ${{ matrix.py.i }}
+      - name: Install and test uuid_utils
+        run: |
+          pip install uuid_utils --no-index --find-links dist --force-reinstall
+          pip install pytest pytest-codspeed
+          pytest -v .
+      - name: Upload wheels
+        uses: actions/upload-artifact@v4
+        with:
+          name: wheels-macos-${{ strategy.job-index }}
+          path: dist
 
-    sdist:
-        name: Source Distribution
-        runs-on: ubuntu-latest
-        steps:
-            - uses: actions/checkout@v4
-            - name: Build sdist
-              uses: PyO3/maturin-action@v1
-              with:
-                  command: sdist
-                  args: --out dist
-            - name: Upload sdist
-              uses: actions/upload-artifact@v4
-              with:
-                  name: wheels-sdist
-                  path: dist
+  sdist:
+    name: Source Distribution
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Build sdist
+        uses: PyO3/maturin-action@v1
+        with:
+          command: sdist
+          args: --out dist
+      - name: Upload sdist
+        uses: actions/upload-artifact@v4
+        with:
+          name: wheels-sdist
+          path: dist
 
-    release:
-        name: Release
-        runs-on: ubuntu-latest
-        if: "startsWith(github.ref, 'refs/tags/')"
-        needs:
-            [
-                lint,
-                linux,
-                linux-cross,
-                musllinux,
-                musllinux-cross,
-                windows,
-                macos,
-                sdist,
-            ]
-        steps:
-            - uses: actions/download-artifact@v4.1.8
-              with:
-                  pattern: wheels-*
-                  merge-multiple: true
-            - name: Publish to PyPI
-              uses: PyO3/maturin-action@v1
-              env:
-                  MATURIN_PYPI_TOKEN: ${{ secrets.PYPI_TOKEN }}
-              with:
-                  command: upload
-                  args: --skip-existing *
+  release:
+    name: Release
+    runs-on: ubuntu-latest
+    if: "startsWith(github.ref, 'refs/tags/')"
+    needs:
+      [
+        lint,
+        linux,
+        linux-cross,
+        musllinux,
+        musllinux-cross,
+        windows,
+        macos,
+        sdist,
+      ]
+    steps:
+      - uses: actions/download-artifact@v4.1.8
+        with:
+          pattern: wheels-*
+          merge-multiple: true
+      - name: Publish to PyPI
+        uses: PyO3/maturin-action@v1
+        env:
+          MATURIN_PYPI_TOKEN: ${{ secrets.PYPI_TOKEN }}
+        with:
+          command: upload
+          args: --skip-existing *
 
-    docs:
-        name: Publish docs
-        runs-on: ubuntu-latest
-        if: "startsWith(github.ref, 'refs/tags/')"
-        needs: [release]
-        steps:
-            - uses: actions/checkout@v4
-            - name: Build and publish docs
-              run: |
-                  pip install -r requirements.txt
-                  make docs_build && make docs_deploy
+  docs:
+    name: Publish docs
+    runs-on: ubuntu-latest
+    if: "startsWith(github.ref, 'refs/tags/')"
+    needs: [release]
+    steps:
+      - uses: actions/checkout@v4
+      - name: Build and publish docs
+        run: |
+          pip install -r requirements.txt
+          make docs_build && make docs_deploy
